# ku-portal-mcp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  pyproject.toml  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/commands/: README.md  calendar.md  ku.md  mail.md  morning.md  search365.md  tasks.md  teams.md
ku_portal_mcp/: __main__.py  academic.py  auth.py  courses.py  dept_notices.py  dept_registry.py  grades.py  library.py  lms.py  scraper.py  server.py  timetable.py
tests/: test_academic.py  test_courses.py  test_dept_registry.py  test_grades.py  test_mcp_integration.py  test_syllabus_structured.py  test_timetable.py
