[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ku-portal-mcp"
version = "0.5.1"
description = "MCP server for Korea University KUPID portal - notices, schedules, scholarships, library, timetable, courses, and Canvas LMS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SonAIengine", email = "sonsj97@korea.ac.kr" }
]
keywords = ["mcp", "korea-university", "kupid", "claude", "claude-code", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Education",
]
dependencies = [
    "mcp[cli]>=1.5.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/SonAIengine/ku-portal-mcp"
Repository = "https://github.com/SonAIengine/ku-portal-mcp"
Issues = "https://github.com/SonAIengine/ku-portal-mcp/issues"

[project.scripts]
ku-portal-mcp = "ku_portal_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ku_portal_mcp"]
